force-app/main/default/objects/RedditItem__c/RedditItem__c.object-meta.xml
<CustomObject>
    <label>Reddit Item</label>
    <nameField>
        <displayFormat>RI-{YY}{0000}</displayFormat>
        <label>Reddit Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reddit Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>