force-app/main/default/objects/RedditItem__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>Autor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>