force-app/main/default/objects/RedditItem__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <label>Fecha de creacion</label>
    <type>DateTime</type>
</CustomField>