force-app/main/default/objects/RedditItem__c/fields/Selftext__c.field-meta.xml
<CustomField>
    <fullName>Selftext__c</fullName>
    <label>Descripcion</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>