force-app/main/default/objects/RedditItem__c/fields/Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail__c</fullName>
    <label>Thumbnail</label>
    <length>80</length>
    <type>Text</type>
</CustomField>