force-app/main/default/objects/RedditItem__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Titulo</label>
    <length>150</length>
    <type>Text</type>
</CustomField>